data/derived/sp14/progs/unify/prog4320.ml.out
Characters 46-47:
  let fixpoint (f,b) = wwhile((fun b ->  (f, (f b) != b)), b);;
                                                ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
